# orthos_ws

./: .gitmodules
src/can_deps/canopen_402/include/canopen_402/: motor.h
src/can_deps/canopen_402/src/: motor.cpp
src/can_deps/canopen_chain_node/src/: ros_chain.cpp
src/orthos-on-board/: can_setup.sh
src/orthos-on-board/orthos_ackermann/: CMakeLists.txt  README.md
src/orthos-on-board/orthos_ackermann/launch/: manual_control.launch
src/orthos-on-board/orthos_ackermann/src/: orthos_ackerman_node.cpp
src/orthos-on-board/orthos_canraw/: README.md
src/orthos-on-board/orthos_canraw/orthos_canraw_driver/: CMakeLists.txt  package.xml
src/orthos-on-board/orthos_canraw/orthos_canraw_driver/launch/: canraw_driver.launch
src/orthos-on-board/orthos_canraw/orthos_canraw_driver/src/: .CANRawTransmitter.cpp.swp  CANRawReceiver.cpp  CANRawTransmitter.cpp  joint_states_helper.cpp
src/orthos-on-board/orthos_canraw/orthos_chassis_lighting/: CMakeLists.txt  package.xml
src/orthos-on-board/orthos_canraw/orthos_chassis_lighting/include/orthos_chassis_lighting/: ChassisController.h
src/orthos-on-board/orthos_canraw/orthos_chassis_lighting/launch/: orthos_chassis_lighting.launch
src/orthos-on-board/orthos_canraw/orthos_chassis_lighting/src/: ChassisController.cpp  chassis_control_node.cpp  orthos_chassis_lighting_node.cpp  orthos_chassis_lighting_node_backup.cpp
src/orthos-on-board/orthos_canraw/orthos_chassis_lighting/srv/: ChassisCommand.srv  SetOrigin.srv
src/orthos-on-board/orthos_canraw/orthos_cubemars_driver/: CMakeLists.txt  package.xml
src/orthos-on-board/orthos_canraw/orthos_cubemars_driver/include/orthos_cubemars_driver/: CubeMarsMotor.h
src/orthos-on-board/orthos_canraw/orthos_cubemars_driver/launch/: orthos_cubemars_driver.launch
src/orthos-on-board/orthos_canraw/orthos_cubemars_driver/msg/: CubeMarsCurrentLoopMsg.msg  CubeMarsPosVelGoal.msg
src/orthos-on-board/orthos_canraw/orthos_cubemars_driver/src/: CubeMarsDriver.cpp  CubeMarsMotor.cpp  CubeMarsUtils.cpp
src/orthos-on-board/orthos_canraw/orthos_cubemars_driver/srv/: SetOrigin.srv
src/orthos-on-board/orthos_canraw/orthos_halo_control/: CMakeLists.txt  package.xml
src/orthos-on-board/orthos_canraw/orthos_halo_control/src/: orthos_halo_control_node.cpp
src/orthos-on-board/orthos_canraw/orthos_ocu_driver/: CMakeLists.txt  package.xml
src/orthos-on-board/orthos_canraw/orthos_science/: CMakeLists.txt  package.xml
src/orthos-on-board/orthos_canraw/orthos_science/include/orthos_science/: ScienceController.h
src/orthos-on-board/orthos_canraw/orthos_science/launch/: orthos_science.launch
src/orthos-on-board/orthos_canraw/orthos_science/msg/: ScienceData.msg
src/orthos-on-board/orthos_canraw/orthos_science/src/: ScienceController.cpp  orthos_science_node.cpp  science_task_manager_node.cpp  senden.h
src/orthos-on-board/orthos_canraw/orthos_science/srv/: ScienceCommand.srv
src/orthos-on-board/orthos_canraw/orthos_servo_driver/: CMakeLists.txt  package.xml
src/orthos-on-board/orthos_canraw/orthos_servo_driver/include/orthos_servo_driver/: ServoController.h
src/orthos-on-board/orthos_canraw/orthos_servo_driver/launch/: orthos_servo_driver.launch  orthos_zed_driver.launch
src/orthos-on-board/orthos_canraw/orthos_servo_driver/msg/: CubeMarsFeedback.msg  ServoControllerFeedback.msg
src/orthos-on-board/orthos_canraw/orthos_servo_driver/src/: .ServoController.cpp.swp  .djasiofjdio.swp  .gripper_control.cpp.swp  .swivel_control_node.cpp.swp  ServoController.cpp  djasiofjdio  swivel_control_node.cpp  swivel_tf_node.cpp  wrist_control_node.cpp
src/orthos-on-board/orthos_canraw/orthos_servo_driver/srv/: ServoCommand.srv
src/orthos-on-board/orthos_description/: CMakeLists.txt  package.xml
src/orthos-on-board/orthos_description/launch/: display_orthos_in_rviz.launch  orthos_rviz.launch  orthos_rviz_new.launch
src/orthos-on-board/orthos_description/meshes/: Drillmount.stl  Kameraaufnahme_vorne.stl  ZED2.stl  base.stl  base_frame.stl  base_frame_old.stl  battery.stl  bogie_left.stl  bogie_right.stl  bohrkopf.stl  camera_mast.stl  drill.stl  finger.stl  halo.stl  hand.stl  hand_v2.stl  linaxe.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  motor.stl  motor_mid.stl  mounting_plate.stl  rocker_left.stl  rocker_right.stl  rotbar.stl  spanner.stl  swivel_1.stl  swivel_2.stl  swivel_3.stl  swivel_mast.stl  swivel_mast_collision.stl  swivel_mount.stl  turn.stl  turn_rear.stl  wheel.stl
src/orthos-on-board/orthos_description/urdf/: .orthos.xacro.swp  materials.xacro  orthos.urdf  orthos.xacro  orthos_noarm_nodrill.xacro  orthosnew.xacro
src/orthos-on-board/orthos_description/urdf/modules/: drill.xacro  orthos_arm.xacro  orthos_base.xacro  orthos_drill.xacro  orthos_drill_new.xacro  orthos_halo.xacro  orthos_rocker_bogie_left.xacro  orthos_rocker_bogie_right.xacro  orthos_swivel.xacro
src/orthos-on-board/orthos_driver/: .CMakeLists.txt.swp  CMakeLists.txt  README.md  can_startup.sh  package.xml
src/orthos-on-board/orthos_driver/config/: CL4-E-1-12.eds  PD2-C4118L1804-E-08.eds  arm_driver_controller.yaml  atalante_arm_controller.yaml  drill_driver.yaml  drill_driver_controller.yaml  driver.yaml  driver_controller.yaml  itl_lab_plots.xml  kackmotor_controller.yaml  kackmotor_driver.yaml  lin_driver.yaml  lin_driver_controller.yaml  shoulder_driver.yaml  shoulder_driver_controller.yaml
src/orthos-on-board/orthos_driver/config/eds/: CL4-E-2-12.eds  (+1 more)
src/orthos-on-board/orthos_driver/launch/: .robot.launch.swo  arm.launch  arm_controller.launch  atalante_arm_controller.launch  drill.launch  drill_controller.launch  kackmotor.launch  kackmotor_controller.launch  motor_aui.launch  old_arm.launch  orthos_canraw_nodes.launch  orthos_swivel.launch  orthos_test.launch  robot.launch  robota.launch
src/orthos-on-board/orthos_driver/scripts/: testdrive.py
src/orthos-on-board/orthos_libs/elissa3_hamilcar_OBS/: CMakeLists.txt  package.xml
src/orthos-on-board/orthos_libs/orthos_ros_stm32/: CMakeLists.txt  README.md  package.xml
src/orthos-on-board/orthos_libs/sbus_serial/: sbus_cmd_vel.launch
(+31 files in other folders)
