<?xml version="1.0"?>
<package>
  <name>orthos_description</name>
  <version>1.0.0</version>
  <description>ERIG Orthos</description>

  <maintainer email="maximilian.von.unwerth@er-ig.de">Maximilian von Unwerth</maintainer>
  <author email="maximilian.von.unwerth@er-ig.de">Maximilian von Unwerth</author>

  <url type="website">http://er-ig.de</url>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
